fix (populaire) : reprise du code de la card supplémentaire en mode medium device, elle ne s'alignait pas correctement avec les autres cards

--- a/css/style.css
+++ b/css/style.css
@@ -492,9 +492,10 @@ nav li:hover a {
 
     .card-hotel-soleil{
         display: flex ;
+        flex-direction: column;
     }
 
-    .activites{
+     .activites{
         width: 100%;
     }
 
